--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>HasDID</title>
     <!--BootStrap 5 CSS-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -12,6 +12,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="custom.css"/>
   </head>
   <body>
     <div class="container-md">
@@ -32,14 +33,27 @@
             <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque parturient dictumst ipsum</p>
         </div>
       </div>
-      <div class="col-md-6 d-flex justify-content-center">
-        <form action="#" method="POST">
-            <input type="text" name="name">
-            <input type="email" name="email">
-            <input type="text" name="message">
-            <button type="submit">Send</button>
-          </form>
-          
+      <div class="col-md-6 d-flex  form-bg">
+        <div class="col">
+        <form action="https://getform.io/f/b44bb191-c2c9-476f-8148-fd45e89684be" method="POST">
+          <!--NickName Input-->
+          <label for="nickname" class="form-label">Nickname</label>
+          <input type="text" class="form-control" id="FormControlInput1" placeholder="nickname" aria-describedby="nickname" name="nickname">
+          <!--Twitter Handle-->
+          <label for="twitterhandle" class="form-label">Twitter handle</label>
+          <input type="text" class="form-control" id="twitterhandle" placeholder="twitterhandle" aria-describedby="twitterhandle" name="twitterhandle">
+          <!--Chia Offer-->
+          <label for="chiaoffer" class="form-label">Chia Offer</label>
+          <textarea class="form-control" id="chiaoffer" rows="3" name="chiaoffer"></textarea>
+          <!--Email Address-->
+          <label for="email" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="email" placeholder="name@example.com" name="email">
+        <!--Submit-->
+        <button type="submit" class="form-submit-btn">
+          Send
+        </button>   
+        </form>
+        </div>
       </div>
     </div>
     <!--Bootstrap 5: Scripts-->
@@ -50,3 +64,6 @@
     ></script>
   </body>
 </html>
+
+
+
