--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-md">
       <div class="row justify-content-center">
         <div class="col-md-4 d-flex justify-content-center">
-          <img src="/assets/HASDID.png" />
+          <img src="/assets/hasdid.png" />
         </div>
       </div>
       <div class="row">
