--- a/index.html
+++ b/index.html
@@ -22,38 +22,51 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 d-flex  form-bg">
-          <div class="col">
-          <form action="https://getform.io/f/b44bb191-c2c9-476f-8148-fd45e89684be" method="POST">
-            <!--NickName Input-->
-            <label for="nickname" class="form-label">Nickname</label>
-            <input type="text" class="form-control" id="FormControlInput1" placeholder="nickname" aria-describedby="nickname" name="nickname">
-            <!--Twitter Handle-->
-            <label for="twitterhandle" class="form-label">Twitter handle</label>
-            <input type="text" class="form-control" id="twitterhandle" placeholder="twitterhandle" aria-describedby="twitterhandle" name="twitterhandle">
-            <!--Chia Offer-->
-            <label for="chiaoffer" class="form-label">Chia Offer</label>
-            <textarea class="form-control" id="chiaoffer" rows="3" name="chiaoffer"></textarea>
-            <!--Email Address-->
-            <label for="email" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="email" placeholder="name@example.com" name="email">
-          <!--Submit-->
-          <button type="submit" class="form-submit-btn">
-            Send
-          </button>   
-          </form>
+        <div class="col-md-6"><h1>Generate a DID</h1></div>
+        <div class="col-md-6"><h1>FAQ</h1></div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 d-flex">
+            <div class="col-md-10 form-bg p-3">
+              <form action="https://getform.io/f/b44bb191-c2c9-476f-8148-fd45e89684be" method="POST">
+                <!--NickName Input-->
+                <label for="nickname" class="form-label">Nickname</label>
+                <input type="text" class="form-control" id="FormControlInput1" placeholder="nickname" aria-describedby="nickname" name="nickname">
+                <!--CHIA DID-->
+                <label for="did" class="form-label">Chia DID</label>
+                <input type="text" class="form-control" id="did" placeholder="nickname" aria-describedby="nickname" name="nickname">
+                <!--Twitter Handle-->
+                <label for="twitterhandle" class="form-label">Twitter handle</label>
+                <input type="text" class="form-control" id="twitterhandle" placeholder="twitterhandle" aria-describedby="twitterhandle" name="twitterhandle">
+                <!--Chia Offer-->
+                <label for="chiaoffer" class="form-label">Project URLs (comma separated list)</label>
+                <textarea class="form-control" id="chiaoffer" rows="3" name="chiaoffer" placeholder="google.com, hasdid.com..."></textarea>
+                <!--Email Address-->
+                <label for="email" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="email" placeholder="name@example.com" name="email">
+                <!--Submit-->
+                <button type="submit" class="form-submit-btn custom-submit my-3">
+                  Create Decentralized ID
+                </button>   
+              </form>
+            </div>
+        
+        </div>
+        <div class="col-md-6  justify-content-center">
+          <div class="row">
+            <div class="col-md-12">
+              <h2>What are Decentralized
+                Identifiers (DIDs)?</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque parturient dictumst ipsum</p>
+              <h2>Why would I use DIDs?</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque parturient dictumst ipsum</p>
+              <h2>What are Decentralized
+                Identifiers (DIDs)?</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque parturient dictumst ipsum</p>
+              <h2>Why would I use DIDs?</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque parturient dictumst ipsum</p>
+            </div>
           </div>
-        </div>
-        <div class="col-md-6 d-flex justify-content-center">
-        <div class="col-md-12">
-            <h1>FAQ</h1>
-            <h2>Important first question?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque parturient dictumst ipsum</p>
-            <h2>Important second question?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque parturient dictumst ipsum</p>
-            <h2>Im interested sign?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque parturient dictumst ipsum</p>
-        </div>
       </div>
       
     </div>
