--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       <div class="row">
         <div class="col-md-6 d-flex">
             <div class="col-md-10 form-bg p-3">
-              <form action="https://getform.io/f/b44bb191-c2c9-476f-8148-fd45e89684be" method="POST">
+              <form action="https://getform.io/f/3a3f43e6-11ac-4b87-b80d-07c87e2f8dd9" method="POST">
                 <!--NickName Input-->
                 <label for="nickname" class="form-label">Nickname</label>
                 <input type="text" class="form-control" id="FormControlInput1" placeholder="nickname" aria-describedby="nickname" name="nickname">
                 <!--CHIA DID-->
                 <label for="did" class="form-label">Chia DID</label>
-                <input type="text" class="form-control" id="did" placeholder="nickname" aria-describedby="nickname" name="nickname">
+                <input type="text" class="form-control" id="did" placeholder="nickname" aria-describedby="nickname" name="did">
                 <!--Twitter Handle-->
                 <label for="twitterhandle" class="form-label">Twitter handle</label>
                 <input type="text" class="form-control" id="twitterhandle" placeholder="twitterhandle" aria-describedby="twitterhandle" name="twitterhandle">
