Added profile button and home button

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
               <h2>What are Decentralized
                 Identifiers (DIDs)?</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque parturient dictumst ipsum</p>
-              <h2>Why would I use DIDs?</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque parturient dictumst ipsum</p>
+              <h2>Check out hasDID profiles.</h2>
+              <a class="custom-link px-4 py-1 mt-3" href="/profiles/index.html">Profile page</a>
             </div>
           </div>
       </div>
