--- a/profiles/index.html
+++ b/profiles/index.html
@@ -32,7 +32,18 @@
     <div class="container-md">
       <div class="row justify-content-center">
         <div class="col-md-4 d-flex justify-content-center">
-          <img src="/assets/hasdid.png" class="m-5" />
+          <img src="/assets/hasdid.png" class="m-4" />
+        </div>
+      </div>
+      <div class="col-md-12">
+        <a class="custom-link px-4 py-1" href="/">Home</a>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-7 m-2">
+          <p>
+            It may take 24 hours for your name to show up here. Thank you for
+            your patience
+          </p>
         </div>
       </div>
       <div class="row justify-content-center">
