Update wording on the website

--- a/index.html
+++ b/index.html
@@ -26,31 +26,31 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6"><h1>Generate a DID</h1></div>
+        <div class="col-md-6"><h1>DID you wish to verify:</h1></div>
         <div class="col-md-6"><h1>FAQ</h1></div>
       </div>
       <div class="row">
         <div class="col-md-6 d-flex">
             <div class="col-md-10 form-bg p-3">
               <form action="https://getform.io/f/3a3f43e6-11ac-4b87-b80d-07c87e2f8dd9" method="POST">
-                <!--NickName Input-->
-                <label for="nickname" class="form-label">Nickname</label>
-                <input type="text" class="form-control" id="FormControlInput1" placeholder="nickname" aria-describedby="nickname" name="nickname">
                 <!--CHIA DID-->
                 <label for="did" class="form-label">Chia DID</label>
-                <input type="text" class="form-control" id="did" placeholder="nickname" aria-describedby="nickname" name="did">
+                <input type="text" class="form-control" id="did" placeholder="chia:did:___" aria-describedby="did" name="did">
+                <!--NickName Input-->
+                <label for="nickname" class="form-label">Nickname</label>
+                <input type="text" class="form-control" id="FormControlInput1" placeholder="scotopic" aria-describedby="nickname" name="nickname">
                 <!--Twitter Handle-->
                 <label for="twitterhandle" class="form-label">Twitter handle</label>
-                <input type="text" class="form-control" id="twitterhandle" placeholder="twitterhandle" aria-describedby="twitterhandle" name="twitterhandle">
+                <input type="text" class="form-control" id="twitterhandle" placeholder="@scotopic" aria-describedby="twitterhandle" name="twitterhandle">
                 <!--Chia Offer-->
                 <label for="chiaoffer" class="form-label">Project URLs (comma separated list)</label>
-                <textarea class="form-control" id="chiaoffer" rows="3" name="chiaoffer" placeholder="google.com, hasdid.com..."></textarea>
+                <textarea class="form-control" id="chiaoffer" rows="3" name="chiaoffer" placeholder="scotopic.xyz, hasDID.io, ..."></textarea>
                 <!--Email Address-->
                 <label for="email" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email" placeholder="name@example.com" name="email">
+                <input type="email" class="form-control" id="email" placeholder="scotopic@email.com" name="email">
                 <!--Submit-->
                 <button type="submit" class="form-submit-btn custom-submit my-3">
-                  Create Decentralized ID
+                  Verify my DID
                 </button>   
               </form>
             </div>
@@ -59,15 +59,14 @@
         <div class="col-md-6  justify-content-center">
           <div class="row">
             <div class="col-md-12">
-              <h2>What are Decentralized
-                Identifiers (DIDs)?</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque parturient dictumst ipsum</p>
+              <h2>What are decentralized
+                Identifiers (dIDs)?</h2>
+              <p>(DIDs) are a new type of identifier that enables verifiable, decentralized digital identity. A DID refers to any subject (e.g., a person, organization, thing, data model, abstract entity, etc.) as determined by the controller of the DID.</p>
               <h2>Why would I use DIDs?</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque parturient dictumst ipsum</p>
-              <h2>What are Decentralized
-                Identifiers (DIDs)?</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque parturient dictumst ipsum</p>
-              <h2>Check out hasDID profiles.</h2>
+              <p>Provenance and authenticity. This is a guarateed way to show you trully are the creator of your artwork.</p>
+              <h2>Why use hasDID.io?</h2>
+              <p>Save yourselve time and effort. Publicise your DID here once with us instead posting tweets to each marketplace for verification.</p>
+              <h2>Artists with DIDs:</h2>
               <a class="custom-link px-4 py-1 mt-3" href="/profiles/index.html">Profile page</a>
             </div>
           </div>
