--- a/profiles/index.html
+++ b/profiles/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HasDID</title>
+    <title>hasDID.io profiles</title>
     <!--Inter fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -42,7 +42,7 @@
         <div class="col-md-7 m-2">
           <p>
             It may take 24 hours for your name to show up here. Thank you for
-            your patience
+            your patience.
           </p>
         </div>
       </div>
